--- a/lk.css
+++ b/lk.css
@@ -5,39 +5,16 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-}
-
-.header {
-    background: #4CAF50;
-    color: white;
-    padding: 20px;
-    text-align: center;
-}
-
-.navbar {
-    display: flex;
-    justify-content: center;
-    background: #333;
-}
-
-.navbar a {
-    color: white;
-    padding: 14px 20px;
-    text-decoration: none;
-    text-align: center;
-}
-
-.navbar a:hover {
-    background: #ddd;
-    color: black;
+    background-color: rgb(224, 224, 250);
 }
 
 .main-content {
     display: flex;
+    flex-direction: column;
     flex: 1;
     justify-content: space-around;
     align-items: center;
-    padding: 20px;
+    padding: 25px;
 }
 
 .content-box {
@@ -48,11 +25,6 @@ body {
     border-radius: 4px;
     flex: 1;
     text-align: center;
+    position: ;
 }
 
-.footer {
-    background: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-}
