--- a/style.css
+++ b/style.css
@@ -1,30 +1,35 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
     height: 100vh;
     background-color: rgb(224, 224, 250);
 }
 
-.main-content {
+.outer-container {
     display: flex;
-    flex-direction: column;
-    flex: 1;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    height: 100%;
     padding: 25px;
 }
 
-.flexbox {
+.main-content {
+    display: flex;
+    flex-direction: column; /* Kotak-kotak akan tersusun ke bawah */
+    justify-content: space-around;
+    align-items: center;
+    width: 80%; /* Atur lebar container utama */
+    padding: 35px;
+    margin: 35px;
+    border: 1px solid #ccc; /* Border untuk container utama */
+    border-radius: 8px;
+    background-color: #ffffff;
+}
+
+.content-box {
     background: #f4f4f4;
     padding: 20px;
     margin: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    flex: 1;
+    width: 100%;
     text-align: center;
-    position: ;
 }
-
